--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,10 @@
 /* mobile */
 @media screen and (max-width: 600px) {
   /* common*/
+
+  body{
+    overflow-x: hidden;
+  }
     .section-title{
         font-size: 20px;
     }
@@ -189,12 +193,28 @@ input[type='email']{
     padding-top: 2.50px;
 }
 /* news end */
-/* banner start */
-/* banner end */
+/* sponsor start */
+.sponsors{
+    padding-top: 24px;
+}
+.sponsors p{
+    width: 350px;
+    padding-bottom: 16px;
+}
+.sponsor-img{
+    padding-top: 20px;
+}
+.sponsor-img .row1, .sponsor-img .row2{
+    flex-direction: column;
+    gap: 30px;
+}
+.row2{
+    padding-top: 24px;
+}
+
+/* sponsor end */
 /* footer start */
 .footer-content{
-    max-width: 340px;
-    margin: 0 auto;
     padding: 32px 0;
 }
 .footer-logo h3{
