--- a/css/style.css
+++ b/css/style.css
@@ -502,11 +502,33 @@ input::placeholder{
     padding-top: 4px;
 }
 /* news end */
-/* tour start */
+/* sponsor start */
+.sponsors{
+    padding-top: 100px;
+}
+.sponsors h3{
+    text-align: center;
+}
+.sponsors p{
+    width: 650px;
+    margin: 0 auto;
+    text-align: center;
+    padding-top: 20px;
+}
+.sponsor-img{
+    padding-top: 40px;
+}
+.sponsor-img .row1, .sponsor-img .row2{
+    display: flex;
+    justify-content: center;
+    gap: 100px;
+    align-items: center;
+}
+.row2{
+    padding-top: 24px;
+}
 
-
-
-/* tour end */
+/* sponsor end */
 /* footer start */
 footer{
     background: rgba(19, 19, 24, 0.05);
